--- a/index.html
+++ b/index.html
@@ -180,11 +180,13 @@
                     <div class="wrap-services moove" data-rellax-speed="5">
                         <h4>Skills</h4>
                         <ul>
-                            <li><span>Angular 1.x.x, 2.x.x</span></li>
-                            <li><span>Node JS | Express JS</span></li>
+                            <li><span>Angular 1.x.x, 2.x.x | TypeScript</span></li>
+                            <li><span>Node JS | Express JS | Java Servlets</span></li>
                             <li><span>Bootstrap | Google Material</span></li>
+                            <li><span>MongoDB | SQL</span></li>
+                            <li><span>JavaScript | jQuery</span></li>
                             <li><span>Bower | Grunt | NPM | GIT</span></li>
-                            <li><span>UI/UX Development</span></li>
+                            <li><span>UI/UX Development | Photoshop </span></li>
                         </ul>
                     </div>
                     <div class="container">
@@ -193,7 +195,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="3">
                                 <h2>ab_<br/>out<span class="color">:</span></h2>
-                                <p data-animation="reveal">I am a Full Stack Web Developer based in Bangalore. <br>I currently work at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a> developing webapp, portals and micro services. I am a dreamer and a fanatic of all digital things. I have 3 years of experience in IT Consulting. I love minimal design and pizza. I am also an Open source contributor.</p>
+                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Bangalore, carrying 3 years of experience in IT Consulting. I work at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a> developing webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things. I love minimal design and pizza :). I'm also an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -210,7 +212,7 @@
                             <div class="col-md-6 moove" data-rellax-speed="4">
                                 <img src="assets/img/projects-750.jpg" alt="Govardhan Srinivas Projects">
                             </div>
-                            <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="7">
+                            <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="5">
                                 <p data-animation="reveal">I've got good exposure in digital products, websites, hybrid apps, CRM platform apps using web technologies developed and deployed to Cloud solutions, together with strong understanding of best practices, analytical capabilities, organizational skills and ability to complete a successful implementation. Here you can find some selected works.</p>
                             </div>
                             <div class="first-project col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
@@ -262,10 +264,12 @@
                                <div class="col-md-6 moove" data-rellax-speed="2">
                                    <p data-animation="reveal">I drink coffee, I eat pizza. I write code and improve my design and skills every day. I am honored to work with special people. Sometimes i won some awards.</p>
                                    <ul class="padding-onlytop-md">
-                                       <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
                                        <li>Indegene LifeSystems<br><span>Best Performer</span></li>
+                                       <li>Indegene LifeSystems<br><span>Aspire Double Up</span></li>
+                                       <li>Cognizant<br><span>Brownie points</span></li>
+                                       <!-- <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
                                        <li>Full Stack Developer Course<br><span>Cognizant MOOC</span></li>
-                                       <li>Real Time Web with Node.js<br><span>Code School</span></li>
+                                       <li>Real Time Web with Node.js<br><span>Code School</span></li> -->
                                    </ul>
                                </div>
                            </div>
