word phrase changes

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="3">
                                 <h2>ab_<br/>out<span class="color">:</span></h2>
-                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Bangalore, carrying 3 years of experience in IT Consulting. I work at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a> developing webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things. I love minimal design and pizza :). I'm also an Open source contributor.</p>
+                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Bangalore, carrying 3 years of experience in IT Consulting. I work at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a> developing webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm also an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
