--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                     <img src="assets/img/emmearredo-750.jpg" alt="Cloud Central Conversion">
                                     <figcaption>Cloud<br>Central<br>Conversion</figcaption>
                                 </figure>
-                                <a href="/en/case-studies/cloud-central-converno-sion/"class="link"></a>
+                                <a no-href=""class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="2">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
