Changed project name

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
                                     <em>view project</em>
                                     <img src="assets/img/look-750.jpg" alt="Cloud Central Integration">
-                                    <figcaption>Cloud<br>Central<br>Integration</figcaption>
+                                    <figcaption>Integration<br>Hub</figcaption>
                                 </figure>
                                 <a no-href="" class="link"></a>
                             </div>
@@ -237,7 +237,7 @@
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
                                     <img src="assets/img/emmearredo-750.jpg" alt="Cloud Central Conversion">
-                                    <figcaption>Cloud<br>Central<br>Conversion</figcaption>
+                                    <figcaption>Conversion<br>Hub</figcaption>
                                 </figure>
                                 <a no-href=""class="link"></a>
                             </div>
