--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <div class="row">
                            <div class="col-md-12">
                                <div class="col-md-6 moove" data-rellax-speed="1">
-                                   <h2>add_<br>ons<span class="color">:</span></h2>
+                                   <h2>ku_<br>dos<span class="color">:</span></h2>
                                </div>
                                <div class="col-md-6 moove" data-rellax-speed="2">
                                    <p data-animation="reveal">I drink coffee, I eat pizza. I write code and improve my design and skills every day. I am honored to work with special people. Sometimes i won some awards.</p>
@@ -270,6 +270,28 @@
                                        <!-- <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
                                        <li>Full Stack Developer Course<br><span>Cognizant MOOC</span></li>
                                        <li>Real Time Web with Node.js<br><span>Code School</span></li> -->
+                                   </ul>
+                               </div>
+                           </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="addons" class="auto">
+                    <div class="container">
+                        <div class="circle circle1 moove moove-mobile" data-rellax-speed="2"></div>
+                        <div class="circle circle2 md moove moove-mobile" data-rellax-speed="3"></div>
+                        <div class="row">
+                           <div class="col-md-12">
+                               <div class="col-md-6 moove" data-rellax-speed="1">
+                                   <h2>add_<br>ons<span class="color">:</span></h2>
+                               </div>
+                               <div class="col-md-6 moove" data-rellax-speed="2">
+                                   <h3 data-animation="reveal">&nbsp;</h3>
+                                   <ul class="padding-onlytop-md">
+                                       <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
+                                       <li>Full Stack Developer Course<br><span>Cognizant MOOC</span></li>
+                                       <li>Real Time Web with Node.js<br><span>Code School</span></li>
+                                       <li>Front End Developer Course<br><span>Cognizant MOOC</span></li>
                                    </ul>
                                </div>
                            </div>
