Added meta tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <meta name="theme-color" content="#000">
         <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore.">
-
+        <meta name="keywords" content="govardhan,srinivas, portfolio,bangalore, angular, node, hire">
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
         <meta name="googlebot" content="index,follow"><!-- Google Specific -->
 
