meta keywords update

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <meta name="google-site-verification" content="WDykerpX8dc0nrCCLlCXt9BjBnJ5-a3xRITGbGpdago" /> -->
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- The above 2 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Govardhan Srinivas | Full Stack Web Developer</title>
         
         <meta name="theme-color" content="#000">
-        <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore.">
-        <meta name="keywords" content="govardhan,srinivas, portfolio,bangalore, angular, node, hire">
+        <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS, Express JS, MEAN Stack Developer based in Bangalore. Actively look for job in Dubai / Abu Dhabi and Qatar.">
+        <meta name="keywords" content="govardhan srinivas, portfolio, bangalore, angular, node, hire">
+    
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
         <meta name="googlebot" content="index,follow"><!-- Google Specific -->
 
