add new organisation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Govardhan Srinivas | Full Stack Web Developer</title>
         
         <meta name="theme-color" content="#000">
-        <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS, Express JS, MEAN Stack Developer based in Bangalore. Actively look for job in Dubai / Abu Dhabi and Qatar.">
+        <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS, Express JS, MEAN Stack Developer based in Bangalore.">
         <meta name="keywords" content="govardhan srinivas, portfolio, bangalore, angular, node, hire">
     
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
@@ -56,7 +56,7 @@
           "url" : "https://govardhan-srinivas.github.io",
           "sameAs" : [
             "https://plus.google.com/+govardhans92",
-            "https://www.facebook.com/govardhan.srinivas92/"
+            "https://github.com/govardhan-srinivas/"
          ]
         }
         </script> 
@@ -108,10 +108,10 @@
         </div>
         <div id="wrap-social">
             <ul>
-                <li><a href="https://www.facebook.com/govardhan.srinivas92/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+                <li><a href="https://github.com/govardhan-srinivas/" target="_blank"><i class="fa fa-github-square"></i> Github</a></li>
                 <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank"><i class="fa fa-linkedin-square"></i> Linkedin</a></li>
                 <li><a href="mailto:govardhan.s92@gmail.com"><i class="fa fa-envelope"></i> Mail</a></li>
-                <li><a href="/assets/pdf/Srinivas%20Govardhan%20-%20Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
+                <li><a href="/assets/pdf/Govardhan%20-%20Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
             </ul>
         </div>
         <div id="share-this">
@@ -180,12 +180,13 @@
                     <div class="wrap-services moove" data-rellax-speed="5">
                         <h4>Skills</h4>
                         <ul>
-                            <li><span>Angular 1.x.x, 2.x.x | TypeScript</span></li>
+                            <li><span>Angular | React | TypeScript</span></li>
                             <li><span>Node JS | Express JS | Java Servlets</span></li>
-                            <li><span>Bootstrap | Google Material</span></li>
-                            <li><span>MongoDB | SQL</span></li>
+                            <li><span>MongoDB | SQL | Redis | Elastic search</span></li>
                             <li><span>JavaScript | jQuery</span></li>
-                            <li><span>Bower | Grunt | NPM | GIT</span></li>
+                            <li><span>Bootstrap | Google Material | KendoUI</span></li>
+                            <li><span>Webpack | Bower | Grunt | NPM | GIT</span></li>
+                            <li><span>Nginx | Jenkins | Docker | CI/CD | AWS</span></li>
                             <li><span>UI/UX Development | Photoshop </span></li>
                         </ul>
                     </div>
@@ -195,7 +196,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="3">
                                 <h2>ab_<br/>out<span class="color">:</span></h2>
-                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Bangalore, carrying 3 years of experience in IT Consulting. I work at <a href="https://www.cognizant.com/" target="_blank">Cognizant</a> developing webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm also an Open source contributor.</p>
+                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Bangalore, with over 4.8 years of experience in IT Design and Development. I work at <a href="https://www.mobinius.com" target="_blank">Mobinius technologies</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm also an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -219,25 +220,33 @@
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
                                     <img src="assets/img/toscano-750.jpg" alt="Microsoft BVS">
+                                    <figcaption>Dutchview<br>FlexWhere</figcaption>
+                                </figure>
+                                <a href="https://flexwhere.com" class="link" target="_blank"></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
+                                <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
+                                    <em>view project</em>
+                                    <img src="assets/img/oleomec-750.jpg" alt="Microsoft BVS">
                                     <figcaption>Microsoft<br>BVS</figcaption>
                                 </figure>
                                 <a no-href="" class="link"></a>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="3">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
                                     <em>view project</em>
                                     <img src="assets/img/look-750.jpg" alt="Cloud Central Integration">
-                                    <figcaption>Integration<br>Hub</figcaption>
+                                    <figcaption>Cognizant<br>Integration Hub</figcaption>
                                 </figure>
                                 <a no-href="" class="link"></a>
                             </div>
-                            <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="1">
+                            <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="3">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
                                     <img src="assets/img/emmearredo-750.jpg" alt="Cloud Central Conversion">
-                                    <figcaption>Conversion<br>Hub</figcaption>
+                                    <figcaption>Cognizant<br>Conversion Hub</figcaption>
                                 </figure>
                                 <a no-href=""class="link"></a>
                             </div>
@@ -312,10 +321,10 @@
                             <h2>I'm always interested about cool stuff. Are you minding a job? <span class="color"><a href="mailto:govardhan.s92@gmail.com" class="color">Let's talk.</a></span></h2>
                             <div class="wrap-social">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/govardhan.srinivas92/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+                                    <li><a href="https://github.com/govardhan-srinivas/" target="_blank"><i class="fa fa-github-square"></i> Github</a></li>
                                     <li><a href="mailto:govardhan.s92@gmail.com"><i class="fa fa-envelope"></i> Mail</a></li>
                                     <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank"><i class="fa fa-linkedin-square"></i> Linkedin</a></li>
-                                    <li><a href="/assets/pdf/Srinivas%20Govardhan%20-%20Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
+                                    <li><a href="/assets/pdf/Govardhan%20-%20Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
                                 </ul>
                             </div>
                         </div>
