--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 2 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Govardhan Srinivas | Full Stack Web Developer</title>
         
         <meta name="theme-color" content="#000">
-        <meta name="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS, Express JS, MEAN Stack Developer based in Bangalore.">
-        <meta name="keywords" content="govardhan srinivas, portfolio, bangalore, angular, node, hire">
+        <meta name="description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
+        <meta name="keywords" content="govardhan srinivas, portfolio, netherlands, angular, react, node, hire">
     
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
         <meta name="googlebot" content="index,follow"><!-- Google Specific -->
@@ -29,8 +28,8 @@
         <!-- Facebook -->
         <meta property="og:locale" content="it_IT" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Govardhan Srinivas. Full Stack Web Developer." />
-        <meta property="og:description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore." />
+        <meta property="og:title" content="Govardhan Srinivas | Full Stack Web Developer" />
+        <meta property="og:description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands." />
         <meta property="og:url" content="index.html" />
         <meta property="og:site_name" content="Govardhan Srinivas" />
         <meta property="og:image" content="assets/img/showcase.jpg" />
@@ -38,14 +37,14 @@
         <!-- Twitter -->
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:title" content="Govardhan Srinivas"/>
-        <meta name="twitter:description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore."/>
+        <meta name="twitter:description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands."/>
         <meta name="twitter:site" content="@Govardhan92"/>
         <meta name="twitter:creator" content="@Govardhan92"/>
         <meta name="twitter:image" content="assets/img/showcase.jpg">
 
         <link href="https://plus.google.com/u/0/+govardhans92" rel="publisher">
         <meta itemprop="name" content="Govardhan Srinivas">
-        <meta itemprop="description" content="Govardhan Srinivas. Full Stack Web Developer. Website, UI/UX,  Angular JS, Node JS Developer based in Bangalore.">
+        <meta itemprop="description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
         <meta itemprop="image" content="assets/img/showcase.jpg">
 
         <script type="application/ld+json">
@@ -196,7 +195,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="3">
                                 <h2>ab_<br/>out<span class="color">:</span></h2>
-                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Bangalore, with over 4.8 years of experience in IT Design and Development. I work at <a href="https://www.mobinius.com" target="_blank">Mobinius technologies</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm also an Open source contributor.</p>
+                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Deventer, Netherlands, with over 6+ years of experience in IT Design and Development. I work at <a href="https://dutchview.com" target="_blank">Dutchview IT</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
