--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <div class="circle circle4 lg moove moove-mobile" data-rellax-speed="-3"></div>
                             <div class="wrap-description">
                                 <p class="small-height">Full Stack Web Developer<br>
-                                    based in Bangalore</p>
+                                    based in Deventer, Netherlands</p>
                             </div>
                             <div class="wrap-content">
                                 <h1>Hello<span class="color">.</span><br>I am<br>Govardhan</h1>
