fix: update the details

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Govardhan Srinivas | Full Stack Web Developer</title>
+        <title>Govardhan Srinivas | Software Development Engineer III</title>
         
         <meta name="theme-color" content="#000">
-        <meta name="description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
+        <meta name="description" content="Govardhan Srinivas | Software Development Engineer III | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
         <meta name="keywords" content="govardhan srinivas, portfolio, netherlands, angular, react, node, hire">
     
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
@@ -28,8 +28,8 @@
         <!-- Facebook -->
         <meta property="og:locale" content="it_IT" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Govardhan Srinivas | Full Stack Web Developer" />
-        <meta property="og:description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands." />
+        <meta property="og:title" content="Govardhan Srinivas | Software Development Engineer III" />
+        <meta property="og:description" content="Govardhan Srinivas | Software Development Engineer III | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands." />
         <meta property="og:url" content="index.html" />
         <meta property="og:site_name" content="Govardhan Srinivas" />
         <meta property="og:image" content="assets/img/showcase.jpg" />
@@ -37,14 +37,14 @@
         <!-- Twitter -->
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:title" content="Govardhan Srinivas"/>
-        <meta name="twitter:description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands."/>
+        <meta name="twitter:description" content="Govardhan Srinivas | Software Development Engineer III | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands."/>
         <meta name="twitter:site" content="@Govardhan92"/>
         <meta name="twitter:creator" content="@Govardhan92"/>
         <meta name="twitter:image" content="assets/img/showcase.jpg">
 
         <link href="https://plus.google.com/u/0/+govardhans92" rel="publisher">
         <meta itemprop="name" content="Govardhan Srinivas">
-        <meta itemprop="description" content="Govardhan Srinivas | Full Stack Web Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
+        <meta itemprop="description" content="Govardhan Srinivas | Software Development Engineer III | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
         <meta itemprop="image" content="assets/img/showcase.jpg">
 
         <script type="application/ld+json">
@@ -110,7 +110,7 @@
                 <li><a href="https://github.com/govardhan-srinivas/" target="_blank"><i class="fa fa-github-square"></i> Github</a></li>
                 <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank"><i class="fa fa-linkedin-square"></i> Linkedin</a></li>
                 <li><a href="mailto:govardhan.s92@gmail.com"><i class="fa fa-envelope"></i> Mail</a></li>
-                <li><a href="/assets/pdf/Govardhan%20-%20Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
+                <li><a href="/assets/pdf/CV%20-%20Govardhan Srinivas.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
             </ul>
         </div>
         <div id="share-this">
@@ -166,7 +166,7 @@
                             <div class="circle circle3 md moove moove-mobile" data-rellax-speed="3"></div>
                             <div class="circle circle4 lg moove moove-mobile" data-rellax-speed="-3"></div>
                             <div class="wrap-description">
-                                <p class="small-height">Full Stack Web Developer<br>
+                                <p class="small-height">Software Development Engineer III<br>
                                     based in Deventer, Netherlands</p>
                             </div>
                             <div class="wrap-content">
@@ -195,7 +195,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="3">
                                 <h2>ab_<br/>out<span class="color">:</span></h2>
-                                <p data-animation="reveal">I'm a Full Stack Web Developer based in Deventer, Netherlands, with over 6+ years of experience in IT Design and Development. I work at <a href="https://dutchview.com" target="_blank">Dutchview IT</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm an Open source contributor.</p>
+                                <p data-animation="reveal">I'm a Software Development Engineer III based in Deventer, Netherlands, with over 8+ years of experience in IT Design and Development. I work at <a href="https://dutchview.com" target="_blank">Dutchview IT</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -272,9 +272,10 @@
                                <div class="col-md-6 moove" data-rellax-speed="2">
                                    <p data-animation="reveal">I drink coffee, I eat pizza. I write code and improve my design and skills every day. I am honored to work with special people. Sometimes i won some awards.</p>
                                    <ul class="padding-onlytop-md">
-                                       <li>Indegene LifeSystems<br><span>Best Performer</span></li>
-                                       <li>Indegene LifeSystems<br><span>Aspire Double Up</span></li>
+                                       <li>Dutchview<br><span>Going Above and Beyond</span></li>
+                                       <li>Cognizant<br><span>Best Performer of the month</span></li>
                                        <li>Cognizant<br><span>Brownie points</span></li>
+                                       <li>Indegene LifeSystems<br><span>Aspire Double Up</span></li>
                                        <!-- <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
                                        <li>Full Stack Developer Course<br><span>Cognizant MOOC</span></li>
                                        <li>Real Time Web with Node.js<br><span>Code School</span></li> -->
@@ -298,8 +299,8 @@
                                    <ul class="padding-onlytop-md">
                                        <li>excel-npv<br><span><a href="https://www.npmjs.com/package/excel-npv">NPM package</a></span></li>
                                        <li>Full Stack Developer Course<br><span>Cognizant MOOC</span></li>
-                                       <li>Real Time Web with Node.js<br><span>Code School</span></li>
                                        <li>Front End Developer Course<br><span>Cognizant MOOC</span></li>
+                                       <li>Real Time Web with Node.js<br><span>Code School</span></li>
                                    </ul>
                                </div>
                            </div>
@@ -323,7 +324,7 @@
                                     <li><a href="https://github.com/govardhan-srinivas/" target="_blank"><i class="fa fa-github-square"></i> Github</a></li>
                                     <li><a href="mailto:govardhan.s92@gmail.com"><i class="fa fa-envelope"></i> Mail</a></li>
                                     <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank"><i class="fa fa-linkedin-square"></i> Linkedin</a></li>
-                                    <li><a href="/assets/pdf/Govardhan%20-%20Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
+                                    <li><a href="/assets/pdf/CV%20-%20Govardhan Srinivas.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
                                 </ul>
                             </div>
                         </div>
