fix: update the email address

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <div class="wrap-social">
                                 <ul>
                                     <li><a href="https://github.com/govardhan-srinivas/" target="_blank"><i class="fa fa-github-square"></i> Github</a></li>
-                                    <li><a href="mailto:govardhan.s92@gmail.com"><i class="fa fa-envelope"></i> Mail</a></li>
+                                    <li><a href="mailto:govardhan.srinivas8@gmail.com"><i class="fa fa-envelope"></i> Mail</a></li>
                                     <li><a href="https://www.linkedin.com/in/govardhan-srinivas/" target="_blank"><i class="fa fa-linkedin-square"></i> Linkedin</a></li>
                                     <li><a href="/assets/pdf/CV%20-%20Govardhan Srinivas.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a></li>
                                 </ul>
