update the website link

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                     <img src="assets/img/toscano-750.jpg" alt="Microsoft BVS">
                                     <figcaption>Dutchview<br>FlexWhere</figcaption>
                                 </figure>
-                                <a href="https://flexwhere.com" class="link" target="_blank"></a>
+                                <a href="https://flexwhere.nl" class="link" target="_blank"></a>
                             </div>
                         </div>
                         <div class="row">
