update the flexwhere image

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <div class="first-project col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
-                                    <img src="assets/img/toscano-750.jpg" alt="Microsoft BVS">
+                                    <img src="assets/img/flexwhere.webp" alt="Microsoft BVS">
                                     <figcaption>Dutchview<br>FlexWhere</figcaption>
                                 </figure>
                                 <a href="https://flexwhere.nl" class="link" target="_blank"></a>
